--- a/css/styles.css
+++ b/css/styles.css
@@ -138,7 +138,7 @@ h1, h2, h3 {
     justify-content: center;
     text-align: center;
     color: #fff;
-    background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url('./img/2.jpg') no-repeat center center/cover;
+    background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url('img/2.jpg') no-repeat center center/cover;
 }
 
 .hero-content h1 {
